# wcag_checker

./: .gitignore  CLAUDE.md  INSTALL.md  PROJECT.md  README.md  SBOM.md  TODO.md  WCAG_CLAUDE.md  pyproject.toml
bulk-tool/: make_score_scatter.py  overview.py  rerender_overview.py  run.py
bulk-tool/datasets/be_hospitals/: domains.csv
bulk-tool/datasets/be_schools/: domains.csv
bulk-tool/datasets/belgium/: domains.csv
bulk-tool/datasets/brussels/: domains.csv
bulk-tool/datasets/municipalities/: domains.csv
bulk-tool/datasets/privacy/: domains.csv
bulk-tool/datasets/publiq/: domains.csv
bulk-tool/datasets/tinyset/: domains.csv
bulk-tool/datasets/vlaanderen/: domains.csv
bulk-tool/datasets/wallonia/: domains.csv
docs/: ANALYSIS.md  COVERAGE.md  SCORING.md
docs/knowledge-base-collective/: Readme.md
leak_inspector/: __init__.py  __main__.py  batch.py  cli.py  cli_batch.py  cname_provider.py  events.py  impact.py  safe_net.py  session.py  signals.py
leak_inspector/analysis/: __init__.py  banner_markup.py  consent.py  cookie_classifier.py  operator_families.py  runner.py  sri.py
leak_inspector/bundle/: __init__.py  manifest.py  reader.py  writer.py
leak_inspector/capture/: __init__.py  bidi.py  dns.py  driver.py  hotkey.py  page_source.py  recorder.py  storage.py
leak_inspector/cms/: __init__.py  detect.py  eol.py  probe.py
leak_inspector/dns_posture/: __init__.py  dnssec.py  email_security.py  geoip.py  orchestrator.py  productivity.py  resolvers.py  sovereignty.py  types.py
leak_inspector/enrichment/: __init__.py  artifact.py  producer.py
leak_inspector/http_posture/: __init__.py  findings.py  probe.py  security_txt.py  tls.py
leak_inspector/modules/: README.md  __init__.py  _cname_cloak_base.py  _public_sector_base.py  act_on.py  addtoany.py  adform.py  adobe_fonts.py  adobe_helix_rum.py  adobe_marketing_cloud.py  adroll.py  amazon_ad_system.py  app360.py  apple_maps.py  apple_pay.py  appnexus.py  azure_application_insights.py  azure_cdn.py  baidu_tongji.py  base.py  bidswitch.py  bidtellect.py  bing_maps.py  bing_uet.py  bombora.py  bootstrapcdn.py  browsealoud.py  chathive.py  clarity.py  cloudflare_cdn.py  cloudflare_turnstile.py  cloudflare_web_analytics.py  cloudflare_zaraz.py  cloudfront.py  commanders_act.py  consentmanager.py  contentsquare.py  cookie_script.py  cookiebot.py  cookieyes.py  (+110 more)
leak_inspector/report/: __init__.py  _branding.py  builder.py  debug.py  diff.py  diff_renderers.py  document.py  emoji_svg.py  html.py  json_reporter.py  markdown.py  nis2.py  pdf.py  score_v2.py  screenshots.py  text.py  verdict.py  verdict_action_metadata.py  verdict_classification.py
leak_inspector/wcag/: __init__.py  axe_runner.py  core.py  keyboard_nav.py  manual_checklist.py  reporter.py  screenshot.py  text_view.py
tests/: conftest.py  test_analysis_banner_markup.py  test_analysis_cname_hosting.py  test_analysis_enrich_host_cap.py  test_analysis_js_cookies.py  test_analysis_matomo_same_host.py  test_analysis_offline.py  test_analysis_page_context.py  test_analysis_plausible.py  test_analysis_security_headers.py  test_analysis_snowplow_asn.py  test_analysis_sri.py  test_audit_page_settle.py  test_batch.py  test_bulk_domains.py  test_bulk_enrichment.py  test_bulk_json.py  test_bulk_out_dir.py  test_bulk_overview_capture_status.py  test_bulk_overview_cms.py  test_bulk_overview_dimension_histogram.py  test_bulk_overview_histogram.py  test_bulk_overview_hosting.py  test_bulk_overview_json.py  test_bulk_overview_ranking.py  test_bulk_overview_score.py  test_bulk_overview_speed.py  test_bulk_pdf.py  test_bulk_screenshot_sidecars.py  test_bundle.py  test_bundle_page_source.py  test_bundle_reader_size_caps.py  test_capture_audit_signal.py  test_capture_bidi_screenshot_signal.py  test_capture_cookie_jar.py  test_capture_driver.py  test_capture_firefox_provision.py  test_capture_hotkey.py  test_capture_network_idle.py  test_capture_page_source.py  (+214 more)
tests/fixtures/: __init__.py  verdict.py
tests/fixtures/bundles/: README.md  __init__.py
tools/: audit_page.py  score_v2_preview.py  wcag_smoke.py
