[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wcag-checker"
version = "0.1.0"
description = "Record a real human-driven Firefox browsing session and audit the visited pages for WCAG 2.2 AA accessibility conformance — axe-core plus keyboard/focus checks, with per-finding element screenshots and an honest coverage report."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Jurgen Gaeremyn", email = "jurgen@belibre.be" },
]
keywords = [
    "wcag",
    "wcag2",
    "accessibility",
    "a11y",
    "web-accessibility",
    "axe-core",
    "audit",
    "selenium",
    "webdriver-bidi",
    "firefox",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "selenium>=4.20",
    "axe-selenium-python>=3.0",
    "tldextract>=5.1",
    "dnspython>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]
wcag-checker = "leak_inspector.cli:main"

[tool.setuptools.packages.find]
include = ["leak_inspector*"]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]